--- a/html/artistes_page.html
+++ b/html/artistes_page.html
@@ -11,7 +11,7 @@
         <div class="container">
             <nav class="navbar">
                 <div class="menu-icon">&#9776;</div>
-                <div class="logo">DELAL DES COULEURS</div>
+                <a class="logo" href="../index.html">DELAL DES COULEURS</a>
                 <div class="search-icon"><img src="../icons/Search.svg" alt="Search Icon" style="width: 24px; height: 24px;"></div>
             </nav>
         </div>
