--- a/html/contact_page.html
+++ b/html/contact_page.html
@@ -17,13 +17,11 @@
         ☰
       </button>
 
-      <a href="page_principal.html" class="navbar__brand">
+      <a href="../index.html" class="navbar__brand">
         DELAL DES COULEURS
       </a>
 
-      <button class="navbar__icon" aria-label="recherche">
-        🔍
-      </button>
+    <button class="btn btn-link ms-auto d-lg-none p-0" aria-label="Recherche"><img src="../icons/Search.png"/></button>
     </nav>
   </header>
 
