--- a/html/contact_page.html
+++ b/html/contact_page.html
@@ -80,9 +80,9 @@
         Abonnez-vous à notre newsletter et ne manquez aucune de nos actualités.<br>
         Ou suivez-nous sur
         <span class="footer__icons">
-          <img src="icons/Facebook.svg" alt="Facebook">
-          <img src="icons/Instagram.svg" alt="Instagram">
-          <img src="icons/Youtube.svg" alt="YouTube">
+          <img src="../icons/Facebook.svg" alt="Facebook">
+          <img src="../icons/Instagram.svg" alt="Instagram">
+          <img src="../icons/Youtube.svg" alt="YouTube">
         </span>
       </p>
     </div>
