--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
  
       <div class="collapse navbar-collapse" id="mainNav">
         <ul class="navbar-nav ms-auto gap-lg-4">
-          <li class="nav-item"><a class="nav-link" href="#boutique">BOUTIQUE</a></li>
+          <li class="nav-item"><a class="nav-link" href="./html/boutique_page.html">BOUTIQUE</a></li>
           <li class="nav-item"><a class="nav-link" href="./html/artistes_page.html">ARTISTES</a></li>
-          <li class="nav-item"><a class="nav-link" href="./html/info_page.html">EXPOSITIONS</a></li>
+          <li class="nav-item"><a class="nav-link" href="./html/expositions_page.html">EXPOSITIONS</a></li>
+          <li class="nav-item"><a class="nav-link" href="./html/info_page.html">À PROPOS</a></li>
           <li class="nav-item"><a class="nav-link" href="./html/contact_page.html">CONTACT</a></li>
         </ul>
         <button class="btn btn-link ms-lg-3 d-none d-lg-inline p-0" aria-label="Recherche"><img src="icons/Search.svg"/></button>
