--- a/html/boutique_page.html
+++ b/html/boutique_page.html
@@ -30,172 +30,172 @@
 
     <!-- 商品卡片模板：复制多次即可 -->
     <div class="product">
-        <img src="../photos/1_picasso_composition-organique.png">
+        <img src="../photos/1_picasso_composition-organique.png" alt="Composition organique">
         <p class="artist">Pablo Picasso</p>
         <p class="title">Composition organique</p>
     </div>
 
     <div class="product">
-        <img src="../photos/2_picasso_boeuf-ecorche.png">
+        <img src="../photos/2_picasso_boeuf-ecorche.png" alt="Le Bœuf écorché">
         <p class="artist">Pablo Picasso</p>
         <p class="title">Le Bœuf écorché</p>
     </div>
 
     <div class="product">
-        <img src="../photos/3_picasso_portrait-bleu.png">
+        <img src="../photos/3_picasso_portrait-bleu.png" alt="Portrait bleu">
         <p class="artist">Pablo Picasso</p>
         <p class="title">Portrait bleu</p>
     </div>
     <div class="product">
-        <img src="../photos/4_pablo-picasso_structures-rouges.png">
+        <img src="../photos/4_pablo-picasso_structures-rouges.png" alt="Composition organique">
         <p class="artist">Pablo Picasso</p>
         <p class="title">Composition organique</p>
     </div>
 
     <div class="product">
-        <img src="../photos/5_picasso_femme-assise.png">
+        <img src="../photos/5_picasso_femme-assise.png" alt="Femme assise">
         <p class="artist">Pablo Picasso</p>
         <p class="title">Femme assise</p>
     </div>
 
     <div class="product">
-        <img src="../photos/6_picasso_scene-d-atelier.png">
+        <img src="../photos/6_picasso_scene-d-atelier.png" alt="Scène d'atelier">
         <p class="artist">Pablo Picasso</p>
         <p class="title">Scène d'atelier</p>
     </div>
     <div class="product">
-        <img src="../photos/7_dechewsky_composition-abstraite.png">
+        <img src="../photos/7_dechewsky_composition-abstraite.png" alt="Composition abstraite">
         <p class="artist">Paul Dechewsky</p>
         <p class="title">Composition abstraite</p>
     </div>
 
     <div class="product">
-        <img src="../photos/8_dechewsky_energie-du-geste.png">
+        <img src="../photos/8_dechewsky_energie-du-geste.png" alt="Énergie du geste">
         <p class="artist">Paul Dechewsky</p>
         <p class="title">Énergie du geste</p>
     </div>
 
     <div class="product">
-        <img src="../photos/9_dechewsky_figures-dorees.png">
+        <img src="../photos/9_dechewsky_figures-dorees.png" alt="Figures dorées">
         <p class="artist">Paul Dechewsky</p>
         <p class="title">Figures dorées</p>
     </div>
     <div class="product">
-        <img src="../photos/10_dechewsky_reve-du-peintre.png">
+        <img src="../photos/10_dechewsky_reve-du-peintre.png" alt="Le Rêve du peintre">
         <p class="artist">Paul Dechewsky</p>
         <p class="title">Le Rêve du peintre</p>
     </div>
 
     <div class="product">
-        <img src="../photos/11_dechewsky_portrait-jeune-femme.png">
+        <img src="../photos/11_dechewsky_portrait-jeune-femme.png" alt="Portrait d'une jeune femme">
         <p class="artist">Paul Dechewsky</p>
         <p class="title">Portrait d'une jeune femme</p>
     </div>
 
     <div class="product">
-        <img src="../photos/12_dechewsky_les-amies.png">
+        <img src="../photos/12_dechewsky_les-amies.png" alt="Les Amies">
         <p class="artist">Paul Dechewsky</p>
         <p class="title">Les Amies</p>
     </div>
     <div class="product">
-        <img src="../photos/13_soutine_autoportrait-deforme.png">
+        <img src="../photos/13_soutine_autoportrait-deforme.png" alt="Autoportrait déformé">
         <p class="artist">Chaïm Soutine</p>
         <p class="title">Autoportrait déformé</p>
     </div>
 
     <div class="product">
-        <img src="../photos/14_soutine_deux-figures-enlacees.png">
+        <img src="../photos/14_soutine_deux-figures-enlacees.png" alt="Deux figures enlacées">
         <p class="artist">Chaïm Soutine</p>
         <p class="title">Deux figures enlacées</p>
     </div>
 
     <div class="product">
-        <img src="../photos/15_soutine_formes-entrelacees.png">
+        <img src="../photos/15_soutine_formes-entrelacees.png" alt="Formes entrelacées">
         <p class="artist">Chaïm Soutine</p>
         <p class="title">Formes entrelacées</p>
     </div>
     <div class="product">
-        <img src="../photos/16_soutine_composition-lyrique.png">
+        <img src="../photos/16_soutine_composition-lyrique.png" alt="Composition lyrique">
         <p class="artist">Chaïm Soutine</p>
         <p class="title">Composition lyrique</p>
     </div>
 
     <div class="product">
-        <img src="../photos/17_soutine_paysage-vert.png">
+        <img src="../photos/17_soutine_paysage-vert.png" alt="Paysage vert">
         <p class="artist">Chaïm Soutine</p>
         <p class="title">Paysage vert</p>
     </div>
 
     <div class="product">
-        <img src="../photos/18_soutine_rythme-jaune-noir.png">
+        <img src="../photos/18_soutine_rythme-jaune-noir.png" alt="Rythme jaune et noir">
         <p class="artist">Chaïm Soutine</p>
         <p class="title">Rythme jaune et noir</p>
     </div>
     <div class="product">
-        <img src="../photos/19_kikoine_nus-en-mouvement.png">
+        <img src="../photos/19_kikoine_nus-en-mouvement.png" alt="Nus en mouvement">
         <p class="artist">Michel Kikoine</p>
         <p class="title">Nus en mouvement</p>
     </div>
 
     <div class="product">
-        <img src="../photos/20_kikoine_reseau-rouge.png">
+        <img src="../photos/20_kikoine_reseau-rouge.png" alt="Réseau rouge">
         <p class="artist">Michel Kikoine</p>
         <p class="title">Réseau rouge</p>
     </div>
 
     <div class="product">
-        <img src="../photos/21_kikoine_miere-rouge-vert.png">
+        <img src="../photos/21_kikoine_miere-rouge-vert.png" alt="Mière sur rouge et vert">
         <p class="artist">Michel Kikoine</p>
         <p class="title">Mière sur rouge et vert</p>
     </div>
     <div class="product">
-        <img src="../photos/22_pascin_couple-assis.png">
+        <img src="../photos/22_pascin_couple-assis.png" alt="Couple assis">
         <p class="artist">Jules Pascin</p>
         <p class="title">Couple assis</p>
     </div>
 
     <div class="product">
-        <img src="../photos/23_pascin_tete-mediative.png">
+        <img src="../photos/23_pascin_tete-mediative.png" alt="Tête médiative">
         <p class="artist">Jules Pascin</p>
         <p class="title">Tête médiative</p>
     </div>
 
     <div class="product">
-        <img src="../photos/24_pascin_abstraction-en-orange.png">
+        <img src="../photos/24_pascin_abstraction-en-orange.png" alt="Abstraction en orange">
         <p class="artist">Jules Pascin</p>
         <p class="title">Abstraction en orange</p>
     </div>
     <div class="product">
-        <img src="../photos/25_chagall_silence-du-soir.png">
+        <img src="../photos/25_chagall_silence-du-soir.png" alt="Silence du soir">
         <p class="artist">Marc Chagall</p>
         <p class="title">Silence du soir</p>
     </div>
 
     <div class="product">
-        <img src="../photos/26_chagall_figure-lumineuse.png">
+        <img src="../photos/26_chagall_figure-lumineuse.png" alt="Figure lumineuse">
         <p class="artist">Marc Chagall</p>
         <p class="title">Figure lumineuse</p>
     </div>
 
     <div class="product">
-        <img src="../photos/27_chagall_structures-ardentes.png">
+        <img src="../photos/27_chagall_structures-ardentes.png" alt="Structures ardentes">
         <p class="artist">Marc Chagall</p>
         <p class="title">Structures ardentes</p>
     </div>
     <div class="product">
-        <img src="../photos/28_chagall_les-constructeurs.png">
+        <img src="../photos/28_chagall_les-constructeurs.png" alt="Les Constructeurs">
         <p class="artist">Marc Chagall</p>
         <p class="title">Les Constructeurs</p>
     </div>
 
     <div class="product">
-        <img src="../photos/29_chagall_elan-vital.png">
+        <img src="../photos/29_chagall_elan-vital.png" alt="Élan vital">
         <p class="artist">Marc Chagall</p>
         <p class="title">Élan vital</p>
     </div>
 
     <div class="product">
-        <img src="../photos/30_chagall_orange-et-noir.png">
+        <img src="../photos/30_chagall_orange-et-noir.png" alt="Orange et noir">
         <p class="artist">Marc Chagall</p>
         <p class="title">Orange et noir</p>
     </div>
