--- a/html/info_page.html
+++ b/html/info_page.html
@@ -26,7 +26,7 @@
 
       <div class="apropos">
         <figure class="apropos__figure">
-          <img src="../photos/image 35.png" alt="Vue intérieure de la galerie" class="apropos__img">
+          <img src="../photos/image_35.png" alt="Vue intérieure de la galerie" class="apropos__img">
         </figure>
 
         <div class="apropos__content">
