--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li class="nav-item"><a class="nav-link" href="./html/info_page.html">À PROPOS</a></li>
           <li class="nav-item"><a class="nav-link" href="./html/contact_page.html">CONTACT</a></li>
         </ul>
-        <button class="btn btn-link ms-lg-3 d-none d-lg-inline p-0" aria-label="Recherche"><img src="icons/Search.svg" style="width: 25px;"/></button>
+        <button class="btn btn-link ms-lg-3 d-none d-lg-inline p-0" aria-label="Recherche"><img src="icons/Search.svg" style="width: 25px;" alt="recherche"/></button>
       </div>
     </nav>
   </header>
@@ -39,7 +39,7 @@
   <main>
     <!-- Hero -->
     <section class="hero position-relative">
-      <img class="w-100 d-block hero-img" src="photos/the-cleveland-museum-of-art-8WFiXepic_Q-unsplash 1.png" alt="Salle d'exposition — peinture expressionniste" />
+      <img class="w-100 d-block hero-img" src="photos/the-cleveland-museum-of-art-8WFiXepic_Q-unsplash_1.png" alt="Salle d'exposition — peinture expressionniste" />
       <div class="hero-slogan">
         <p class="display-6 m-0"><strong>"Vivre la couleur,<br> ressentir l'art"</strong></p>
       </div>
@@ -55,7 +55,7 @@
           <!-- 第一行 -->
           <div class="col-12 col-md-4">
             <figure class="thumb">
-              <img class="img-fluid rounded" src="photos/europeana-97T6yITRXc0-unsplash 1.png" alt="André Lanskoy — Composition organique">
+              <img class="img-fluid rounded" src="photos/europeana-97T6yITRXc0-unsplash_1.png" alt="André Lanskoy — Composition organique">
               <figcaption class="legend">
                 <strong>André Lanskoy</strong><br>
                 <em>Composition organique</em>
@@ -64,7 +64,7 @@
           </div>
           <div class="col-12 col-md-4">
             <figure class="thumb">
-              <img class="img-fluid rounded" src="photos/museum-of-new-zealand-te-papa-tongarewa-NkrkSVz9N5M-unsplash 1.png" alt="Chaïm Soutine — Le Bœuf écorché">
+              <img class="img-fluid rounded" src="photos/museum-of-new-zealand-te-papa-tongarewa-NkrkSVz9N5M-unsplash_1.png" alt="Chaïm Soutine — Le Bœuf écorché">
               <figcaption class="legend">
                 <strong>Chaïm Soutine</strong><br>
                 <em>Le Bœuf écorché</em>
@@ -73,7 +73,7 @@
           </div>
           <div class="col-12 col-md-4">
             <figure class="thumb">
-              <img class="img-fluid rounded" src="photos/europeana-zdiXBovPPRI-unsplash 1.png" alt="Jeanne Hébuterne — Portrait bleu">
+              <img class="img-fluid rounded" src="photos/europeana-zdiXBovPPRI-unsplash_1.png" alt="Jeanne Hébuterne — Portrait bleu">
               <figcaption class="legend">
                 <strong>Jeanne Hébuterne</strong><br>
                 <em>Portrait bleu</em>
@@ -84,7 +84,7 @@
           <!-- 第二行 -->
           <div class="col-12 col-md-4">
             <figure class="thumb">
-              <img class="img-fluid rounded" src="photos/fons-heijnsbroek-8fGOAAKGDCM-unsplash 1.png" alt="Serge Poliakoff — Structures rouges">
+              <img class="img-fluid rounded" src="photos/fons-heijnsbroek-8fGOAAKGDCM-unsplash_1.png" alt="Serge Poliakoff — Structures rouges">
               <figcaption class="legend">
                 <strong>Serge Poliakoff</strong><br>
                 <em>Structures rouges</em>
@@ -93,7 +93,7 @@
           </div>
           <div class="col-12 col-md-4">
             <figure class="thumb">
-              <img class="img-fluid rounded" src="photos/europeana-1t9_9jxM2Bk-unsplash 1.png" alt="Ossip Zadkine — Femme assise">
+              <img class="img-fluid rounded" src="photos/europeana-1t9_9jxM2Bk-unsplash_1.png" alt="Ossip Zadkine — Femme assise">
               <figcaption class="legend">
                 <strong>Ossip Zadkine</strong><br>
                 <em>Femme assise</em>
@@ -102,7 +102,7 @@
           </div>
           <div class="col-12 col-md-4">
             <figure class="thumb">
-              <img class="img-fluid rounded" src="photos/europeana-smw6kSH7O6o-unsplash 1.png" alt="Pablo Picasso — Scène d’atelier">
+              <img class="img-fluid rounded" src="photos/europeana-smw6kSH7O6o-unsplash_1.png" alt="Pablo Picasso — Scène d’atelier">
               <figcaption class="legend">
                 <strong>Pablo Picasso</strong><br>
                 <em>Scène d'atelier</em>
@@ -126,25 +126,25 @@
 
           <!-- 1 -->
           <div class="col-10 col-md-4">
-            <img src="photos/image 32.png" class="img-fluid rounded artistes" alt="Atelier d'artiste">
+            <img src="photos/image_32.png" class="img-fluid rounded artistes" alt="Atelier d'artiste">
             <p class="artist-name mt-2">Pascin</p>
           </div>
 
           <!-- 2 -->
           <div class="col-10 col-md-4">
-            <img src="photos/image 39.png" class="img-fluid rounded artistes" alt="Œuvre abstraite rouge">
+            <img src="photos/image_39.png" class="img-fluid rounded artistes" alt="Œuvre abstraite rouge">
             <p class="artist-name mt-2">Schiele</p>
           </div>
 
           <!-- 3 -->
           <div class="col-10 col-md-4">
-            <img src="photos/image 33.png" class="img-fluid rounded artistes" alt="Portrait noir et blanc">
+            <img src="photos/image_33.png" class="img-fluid rounded artistes" alt="Portrait noir et blanc">
             <p class="artist-name mt-2">Modigliani</p>
           </div>
 
           <!-- 4 -->
           <div class="col-10 col-md-4">
-            <img src="photos/image portrait.png" class="img-fluid rounded artistes" alt="Portrait expressionniste bleu">
+            <img src="photos/image_portrait.png" class="img-fluid rounded artistes" alt="Portrait expressionniste bleu">
             <p class="artist-name mt-2">Chagall</p>
           </div>
 
@@ -163,7 +163,7 @@
           <div class="col-12 col-md-6">
             <p class="text-center fw-semibold text-muted mb-2">Actuellement</p>
             <figure class="thumb1">
-              <img class="img-fluid rounded" src="photos/image 35.png" alt="Exposition en cours - vue de salle">
+              <img class="img-fluid rounded" src="photos/image_35.png" alt="Exposition en cours - vue de salle">
             </figure>
             <p class="expo-caption text-center">
               <a href="#" class="link-dark text-decoration-underline">« Vibrations de l’âme »</a><br>
@@ -175,7 +175,7 @@
           <div class="col-12 col-md-6">
             <p class="text-center fw-semibold text-muted mb-2">À venir</p>
             <figure class="thumb1">
-              <img class="img-fluid rounded" src="photos/image 36.png" alt="Exposition à venir - vue de salle">
+              <img class="img-fluid rounded" src="photos/image_36.png" alt="Exposition à venir - vue de salle">
             </figure>
             <p class="expo-caption text-center">
               <a href="#" class="link-dark text-decoration-underline">« Expositions contemporaines »</a><br>
